# project_e

./: .gitignore  CMakeLists.txt  cmk.bat
engine/: CMakeLists.txt
engine/include/: camera.h  engine.h  globals.h  matrix.h  mesh.h  obj_reader.h  render2d.h  render3d.h  set.h  vector3.h  vector4.h  vertices.h
engine/rendering/include/: camera.h  engine.h  mesh.h  render2d.h  render3d.h  vector4.h
engine/rendering/src/: camera.c  mesh.c  render2d.c  render3d.c  vector4.c
engine/src/: camera.c  matrix.c  mesh.c  obj_reader.c  render2d.c  render3d.c  set.c  vector3.c  vector4.c  vertices.c
engine_tests/: CMakeLists.txt
engine_tests/src/: main.c
game/: CMakeLists.txt
game/src/: main.c
python_pre_tests/: rasterization.py
